Add LJ visualisation

--- a/G-SMILES-to-parameters.ipynb
+++ b/G-SMILES-to-parameters.ipynb
@@ -25,12 +25,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b01f6dac",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1820ab95b19477ea24896e243463bd0",
+       "model_id": "c2884579234c4644b9dd2352e270e581",
        "version_major": 2,
        "version_minor": 0
       },
@@ -41,7 +43,7 @@
     }
    ],
    "source": [
-    "from utils import draw_molecule\n",
+    "from utils import draw_molecule, AtomHighlight\n",
     "\n",
     "from openff.toolkit import ForceField, Molecule\n",
     "from openff.units import unit"
@@ -51,7 +53,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "00bbdf6b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_bond_lengths(\n",
@@ -69,14 +73,129 @@
     "        length = potential.parameters[\"length\"].m_as(unit.angstrom)\n",
     "        bond_lengths[topology_key.atom_indices] = f\"{length:.2f} Å\"\n",
     "\n",
-    "    return bond_lengths"
+    "    return bond_lengths\n",
+    "\n",
+    "def get_lj_highlights(\n",
+    "    molecule: str,\n",
+    "    force_field: ForceField = ForceField(\"openff-2.1.0.offxml\"),\n",
+    ") -> dict[tuple[int], str]:\n",
+    "    vdw_params: dict[int, (Quantity, Quantity)] = dict()\n",
+    "    vdw_collection = force_field.create_interchange(\n",
+    "        topology=Molecule.from_smiles(molecule).to_topology(),\n",
+    "    )[\"vdW\"]\n",
+    "\n",
+    "    for topology_key, potential_key in vdw_collection.key_map.items():\n",
+    "        potential = vdw_collection.potentials[potential_key]\n",
+    "\n",
+    "        rmin_half = 2**(1/6) * potential.parameters[\"sigma\"] / 2\n",
+    "        epsilon = potential.parameters[\"epsilon\"]\n",
+    "        \n",
+    "        vdw_params[topology_key.atom_indices[0]] = (rmin_half, epsilon)\n",
+    "    \n",
+    "    vdw_handler = force_field[\"vdW\"]\n",
+    "    max_epsilon = max([param.epsilon for param in vdw_handler.parameters])\n",
+    "    highlights = {\n",
+    "        i: AtomHighlight(\n",
+    "            radius=rmin_half,\n",
+    "            color = (0, 200, epsilon / max_epsilon * 255)\n",
+    "        ) for i, (rmin_half, epsilon) in vdw_params.items()\n",
+    "    }\n",
+    "\n",
+    "    return highlights"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "dbc9ada7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:rdkit=\"http://www.rdkit.org/xml\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" version=\"1.1\" baseProfile=\"full\" xml:space=\"preserve\" width=\"980px\" height=\"400px\" viewBox=\"0 0 980 400\">\n",
+       "<!-- END OF HEADER -->\n",
+       "<rect style=\"opacity:1.0;fill:#FFFFFF;stroke:none\" width=\"980.0\" height=\"400.0\" x=\"0.0\" y=\"0.0\"> </rect>\n",
+       "<ellipse cx=\"390.9\" cy=\"126.6\" rx=\"108.4\" ry=\"108.4\" class=\"atom-0\" style=\"fill:#00C8FB;fill-rule:evenodd;stroke:#00C8FB;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"388.1\" cy=\"195.7\" rx=\"87.5\" ry=\"87.5\" class=\"atom-1\" style=\"fill:#00C844;fill-rule:evenodd;stroke:#00C844;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"385.3\" cy=\"265.0\" rx=\"77.6\" ry=\"77.6\" class=\"atom-2\" style=\"fill:#00C883;fill-rule:evenodd;stroke:#00C883;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"457.3\" cy=\"198.5\" rx=\"90.1\" ry=\"90.1\" class=\"atom-3\" style=\"fill:#00C836;fill-rule:evenodd;stroke:#00C836;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"489.4\" cy=\"259.8\" rx=\"90.1\" ry=\"90.1\" class=\"atom-4\" style=\"fill:#00C836;fill-rule:evenodd;stroke:#00C836;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"558.6\" cy=\"262.6\" rx=\"83.0\" ry=\"83.0\" class=\"atom-5\" style=\"fill:#00C869;fill-rule:evenodd;stroke:#00C869;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"595.5\" cy=\"204.1\" rx=\"90.1\" ry=\"90.1\" class=\"atom-6\" style=\"fill:#00C836;fill-rule:evenodd;stroke:#00C836;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"563.4\" cy=\"143.0\" rx=\"78.7\" ry=\"78.7\" class=\"atom-7\" style=\"fill:#00C884;fill-rule:evenodd;stroke:#00C884;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"319.0\" cy=\"192.9\" rx=\"66.9\" ry=\"66.9\" class=\"atom-8\" style=\"fill:#00C80A;fill-rule:evenodd;stroke:#00C80A;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"324.0\" cy=\"297.0\" rx=\"13.8\" ry=\"13.9\" class=\"atom-9\" style=\"fill:#00C800;fill-rule:evenodd;stroke:#00C800;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"494.3\" cy=\"140.1\" rx=\"66.6\" ry=\"66.6\" class=\"atom-10\" style=\"fill:#00C80A;fill-rule:evenodd;stroke:#00C80A;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"452.4\" cy=\"318.3\" rx=\"63.5\" ry=\"63.5\" class=\"atom-11\" style=\"fill:#00C808;fill-rule:evenodd;stroke:#00C808;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"590.7\" cy=\"323.9\" rx=\"28.6\" ry=\"28.6\" class=\"atom-12\" style=\"fill:#00C809;fill-rule:evenodd;stroke:#00C809;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"664.7\" cy=\"206.9\" rx=\"63.2\" ry=\"63.2\" class=\"atom-13\" style=\"fill:#00C809;fill-rule:evenodd;stroke:#00C809;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-0 atom-0 atom-1\" d=\"M 390.4,138.7 L 388.1,195.7\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-1 atom-1 atom-2\" d=\"M 388.1,195.7 L 385.8,252.7\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-2 atom-1 atom-3\" d=\"M 388.1,195.7 L 457.3,198.5\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-3 atom-3 atom-4\" d=\"M 457.3,198.5 L 489.4,259.8\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-3 atom-3 atom-4\" d=\"M 450.9,208.7 L 477.4,259.3\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-4 atom-4 atom-5\" d=\"M 489.4,259.8 L 548.8,262.2\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-5 atom-5 atom-6\" d=\"M 566.2,250.5 L 595.5,204.1\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-6 atom-6 atom-7\" d=\"M 601.5,204.4 L 574.5,152.9\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-6 atom-6 atom-7\" d=\"M 592.3,209.2 L 565.4,157.8\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 384.5,195.9 L 384.6,195.3\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 381.0,196.1 L 381.0,194.8\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 377.4,196.3 L 377.5,194.3\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 373.8,196.5 L 373.9,193.9\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 370.3,196.6 L 370.4,193.4\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 366.7,196.8 L 366.9,192.9\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 363.1,197.0 L 363.3,192.5\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 359.6,197.2 L 359.8,192.0\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 356.0,197.4 L 356.2,191.5\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 352.4,197.5 L 352.7,191.1\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 348.8,197.7 L 349.1,190.6\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 345.3,197.9 L 345.6,190.1\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 341.7,198.1 L 342.0,189.7\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 338.1,198.3 L 338.5,189.2\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 334.6,198.4 L 335.0,188.7\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-7 atom-1 atom-8\" d=\"M 331.0,198.6 L 331.4,188.2\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-8 atom-2 atom-9\" d=\"M 374.0,270.8 L 334.0,291.8\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-9 atom-3 atom-10\" d=\"M 457.3,198.5 L 486.6,152.1\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-10 atom-4 atom-11\" d=\"M 489.4,259.8 L 460.1,306.2\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-11 atom-5 atom-12\" d=\"M 564.9,274.7 L 584.4,311.8\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-12 atom-6 atom-13\" d=\"M 595.5,204.1 L 654.7,206.5\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path d=\"M 594.1,206.4 L 595.5,204.1 L 598.5,204.2\" style=\"fill:none;stroke:#000000;stroke-width:2.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"atom-0\" d=\"M 389.6 116.8 L 392.2 116.8 L 392.2 136.4 L 389.6 136.4 L 389.6 116.8 \" fill=\"#000000\"/>\n",
+       "<path class=\"atom-2\" d=\"M 376.3 264.9 Q 376.3 260.2, 378.6 257.6 Q 381.0 255.0, 385.3 255.0 Q 389.7 255.0, 392.0 257.6 Q 394.3 260.2, 394.3 264.9 Q 394.3 269.7, 392.0 272.4 Q 389.6 275.1, 385.3 275.1 Q 381.0 275.1, 378.6 272.4 Q 376.3 269.7, 376.3 264.9 M 385.3 272.9 Q 388.3 272.9, 389.9 270.9 Q 391.5 268.9, 391.5 264.9 Q 391.5 261.1, 389.9 259.1 Q 388.3 257.2, 385.3 257.2 Q 382.3 257.2, 380.7 259.1 Q 379.1 261.1, 379.1 264.9 Q 379.1 268.9, 380.7 270.9 Q 382.3 272.9, 385.3 272.9 \" fill=\"#000000\"/>\n",
+       "<path class=\"atom-5\" d=\"M 554.2 252.8 L 560.6 263.2 Q 561.3 264.2, 562.3 266.1 Q 563.3 267.9, 563.4 268.0 L 563.4 252.8 L 566.0 252.8 L 566.0 272.4 L 563.3 272.4 L 556.4 261.1 Q 555.6 259.7, 554.7 258.2 Q 553.9 256.7, 553.7 256.2 L 553.7 272.4 L 551.1 272.4 L 551.1 252.8 L 554.2 252.8 \" fill=\"#000000\"/>\n",
+       "<path class=\"atom-7\" d=\"M 554.4 142.9 Q 554.4 138.2, 556.7 135.6 Q 559.0 132.9, 563.4 132.9 Q 567.7 132.9, 570.1 135.6 Q 572.4 138.2, 572.4 142.9 Q 572.4 147.7, 570.0 150.4 Q 567.7 153.1, 563.4 153.1 Q 559.1 153.1, 556.7 150.4 Q 554.4 147.7, 554.4 142.9 M 563.4 150.8 Q 566.4 150.8, 568.0 148.9 Q 569.6 146.8, 569.6 142.9 Q 569.6 139.1, 568.0 137.1 Q 566.4 135.2, 563.4 135.2 Q 560.4 135.2, 558.8 137.1 Q 557.2 139.0, 557.2 142.9 Q 557.2 146.9, 558.8 148.9 Q 560.4 150.8, 563.4 150.8 \" fill=\"#000000\"/>\n",
+       "<path class=\"atom-8\" d=\"M 311.3 183.1 L 314.0 183.1 L 314.0 191.5 L 324.0 191.5 L 324.0 183.1 L 326.6 183.1 L 326.6 202.7 L 324.0 202.7 L 324.0 193.7 L 314.0 193.7 L 314.0 202.7 L 311.3 202.7 L 311.3 183.1 \" fill=\"#000000\"/>\n",
+       "<path class=\"atom-9\" d=\"M 316.4 287.2 L 319.0 287.2 L 319.0 295.6 L 329.1 295.6 L 329.1 287.2 L 331.7 287.2 L 331.7 306.8 L 329.1 306.8 L 329.1 297.8 L 319.0 297.8 L 319.0 306.8 L 316.4 306.8 L 316.4 287.2 \" fill=\"#000000\"/>\n",
+       "<path class=\"atom-10\" d=\"M 486.6 130.3 L 489.2 130.3 L 489.2 138.6 L 499.3 138.6 L 499.3 130.3 L 501.9 130.3 L 501.9 149.8 L 499.3 149.8 L 499.3 140.8 L 489.2 140.8 L 489.2 149.8 L 486.6 149.8 L 486.6 130.3 \" fill=\"#000000\"/>\n",
+       "<path class=\"atom-11\" d=\"M 444.7 308.5 L 447.4 308.5 L 447.4 316.8 L 457.4 316.8 L 457.4 308.5 L 460.1 308.5 L 460.1 328.1 L 457.4 328.1 L 457.4 319.0 L 447.4 319.0 L 447.4 328.1 L 444.7 328.1 L 444.7 308.5 \" fill=\"#000000\"/>\n",
+       "<path class=\"atom-12\" d=\"M 583.0 314.1 L 585.7 314.1 L 585.7 322.4 L 595.7 322.4 L 595.7 314.1 L 598.4 314.1 L 598.4 333.7 L 595.7 333.7 L 595.7 324.6 L 585.7 324.6 L 585.7 333.7 L 583.0 333.7 L 583.0 314.1 \" fill=\"#000000\"/>\n",
+       "<path class=\"atom-13\" d=\"M 657.0 197.1 L 659.7 197.1 L 659.7 205.5 L 669.7 205.5 L 669.7 197.1 L 672.4 197.1 L 672.4 216.7 L 669.7 216.7 L 669.7 207.7 L 659.7 207.7 L 659.7 216.7 L 657.0 216.7 L 657.0 197.1 \" fill=\"#000000\"/>\n",
+       "</svg>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.SVG object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SMILES = r\"[I][C@H](O)/C=C/NC=O\"\n",
+    "draw_molecule(SMILES, highlight_atoms=get_lj_highlights(SMILES))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "a786ddfc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -293,7 +412,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f71286fa",
    "metadata": {},
    "outputs": [
@@ -475,7 +594,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
