--- a/R-custom_substructures_and_nagl.ipynb
+++ b/R-custom_substructures_and_nagl.ipynb
@@ -361,9 +361,7 @@
    "outputs": [],
    "source": [
     "fixer = PDBFixer(\"inputs/ace-ZZZ-gly-nme.pdb\")\n",
-    "fixer.addSolvent(\n",
-    "    padding=1.0 * omm_unit.nanometer, ionicStrength=0.15 * omm_unit.molar\n",
-    ")\n",
+    "fixer.addSolvent(padding=1.0 * omm_unit.nanometer, ionicStrength=0.15 * omm_unit.molar)\n",
     "\n",
     "with open(\"peptide_solvated.pdb\", \"w\") as f:\n",
     "    openmm.app.PDBFile.writeFile(fixer.topology, fixer.positions, f)"
@@ -1083,8 +1081,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#topology = mol.to_topology()\n",
-    "#topology.box_vectors = np.array([40, 40, 40]) * unit.angstrom"
+    "# topology = mol.to_topology()\n",
+    "# topology.box_vectors = np.array([40, 40, 40]) * unit.angstrom"
    ]
   },
   {
