Run linters on notebooks

--- a/G-PDB-to-simulation.ipynb
+++ b/G-PDB-to-simulation.ipynb
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "from openff.toolkit import Molecule, Topology, ForceField\n",
+    "from openff.toolkit import ForceField, Molecule, Topology\n",
     "\n",
     "ligand = Molecule.from_file(\"inputs/PT2385.sdf\")\n",
     "top = Topology.from_pdb(\"inputs/solvated_complex.pdb\", unique_molecules=[ligand])\n",
