--- a/G-SMILES-to-parameters.ipynb
+++ b/G-SMILES-to-parameters.ipynb
@@ -41,10 +41,10 @@
     }
    ],
    "source": [
-    "from utils import draw_molecule\n",
-    "\n",
     "from openff.toolkit import ForceField, Molecule\n",
-    "from openff.units import unit"
+    "from openff.units import unit\n",
+    "\n",
+    "from utils import draw_molecule"
    ]
   },
   {
