--- a/G-vectorized-representations.ipynb
+++ b/G-vectorized-representations.ipynb
@@ -52,10 +52,9 @@
    ],
    "source": [
     "import numpy\n",
+    "from openff.interchange import Interchange\n",
     "from openff.toolkit import ForceField, Molecule\n",
-    "from rich.pretty import pprint\n",
-    "\n",
-    "from openff.interchange import Interchange"
+    "from rich.pretty import pprint"
    ]
   },
   {
