--- a/R-custom_substructures_and_nagl.ipynb
+++ b/R-custom_substructures_and_nagl.ipynb
@@ -63,23 +63,21 @@
     }
    ],
    "source": [
-    "import openmm\n",
-    "import openmm.unit as omm_unit\n",
-    "from openmm.app import DCDReporter\n",
-    "import numpy as np\n",
     "import mdtraj\n",
     "import nglview\n",
+    "import numpy as np\n",
+    "import openff.toolkit.utils.exceptions\n",
+    "import openmm\n",
+    "import openmm.unit as omm_unit\n",
     "import rdkit.Chem\n",
-    "from chemper.mol_toolkits import mol_toolkit\n",
     "from chemper.graphs.single_graph import SingleGraph\n",
-    "from pdbfixer import PDBFixer\n",
-    "\n",
+    "from chemper.mol_toolkits import mol_toolkit\n",
+    "from openff.toolkit import ForceField, Molecule\n",
+    "from openff.toolkit.typing.engines.smirnoff.parameters import LibraryChargeHandler\n",
     "from openff.units import unit\n",
     "from openff.units.openmm import from_openmm\n",
-    "\n",
-    "from openff.toolkit import Molecule, ForceField\n",
-    "from openff.toolkit.typing.engines.smirnoff.parameters import LibraryChargeHandler\n",
-    "import openff.toolkit.utils.exceptions"
+    "from openmm.app import DCDReporter\n",
+    "from pdbfixer import PDBFixer"
    ]
   },
   {
@@ -2613,11 +2611,11 @@
     }
    ],
    "source": [
+    "import random\n",
+    "\n",
     "from openff.toolkit import Molecule\n",
     "from openff.toolkit.utils._nagl_wrapper import _NAGLToolkitWrapper\n",
-    "\n",
     "from rdkit import Chem\n",
-    "import random\n",
     "\n",
     "amino_acids = \"ACDEFGHIKLMNPQSTVWY\"  # R causes lots of trouble with stereo\n",
     "random_sequence = \"\".join([random.choice(amino_acids) for _ in range(20)])\n",
