--- a/Y-from-openmm-xml.ipynb
+++ b/Y-from-openmm-xml.ipynb
@@ -78,13 +78,11 @@
     }
    ],
    "source": [
-    "from openff.interchange import Interchange\n",
     "import openmm\n",
     "import openmm.app\n",
-    "\n",
-    "from openff.units.openmm import ensure_quantity\n",
-    "\n",
-    "from openff.interchange.drivers import get_openmm_energies, get_summary_data"
+    "from openff.interchange import Interchange\n",
+    "from openff.interchange.drivers import get_openmm_energies, get_summary_data\n",
+    "from openff.units.openmm import ensure_quantity"
    ]
   },
   {
