--- a/Y-interchange-combination-export.ipynb
+++ b/Y-interchange-combination-export.ipynb
@@ -57,12 +57,11 @@
     "import mdtraj as md\n",
     "import nglview\n",
     "import numpy as np\n",
-    "from openff.toolkit import ForceField, Molecule, Topology\n",
-    "from openff.units import unit\n",
-    "\n",
     "from openff.interchange import Interchange\n",
     "from openff.interchange.components._packmol import pack_box\n",
-    "from openff.interchange.drivers import get_summary_data, get_openmm_energies"
+    "from openff.interchange.drivers import get_openmm_energies, get_summary_data\n",
+    "from openff.toolkit import ForceField, Molecule, Topology\n",
+    "from openff.units import unit"
    ]
   },
   {
