--- a/Y-micelle-self-assembly.ipynb
+++ b/Y-micelle-self-assembly.ipynb
@@ -30,15 +30,14 @@
    "source": [
     "from io import StringIO\n",
     "\n",
-    "from openff.toolkit import Topology, Molecule, ForceField\n",
+    "import mdtraj\n",
+    "import nglview\n",
+    "import numpy as np\n",
+    "import openmm\n",
     "from openff.interchange import Interchange\n",
     "from openff.interchange.components._packmol import pack_box\n",
+    "from openff.toolkit import ForceField, Molecule, Topology\n",
     "from openff.units import unit\n",
-    "\n",
-    "import nglview\n",
-    "import openmm\n",
-    "import numpy as np\n",
-    "import mdtraj\n",
     "\n",
     "\n",
     "def visualize(topology):\n",
@@ -315,9 +314,9 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import mdtraj\n",
     "import nglview\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "def wrap(trajectory):\n",
